--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ build-backend = "setuptools.build_meta"
 name = "knowledgebase"
 version = "0.1.0"
 requires-python = ">=3.12"
+dependencies = [
+  "PyYAML>=6.0",
+]
 
 [tool.pytest.ini_options]
 pythonpath = ["src"]
